src/main/resources/yaml/network-policy/deny-all-old-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-old
spec:
  podSelector: {}
